[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roam-graph"
version = "0.1.0"
description = "Cross-reference indexer for documentation graphs."
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "SuperInstance" }]
keywords = ["docs", "graph", "cross-reference", "discoverability"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
roam-graph = "roam_graph.cli:main"

[tool.setuptools]
packages = ["roam_graph"]
